2010-02-22	Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/Core.pm: Updated documentation, fixed wrong parameters
	in the call to distance_moved.

	* man/man3/PandoraFMS::Core.pm.3: Updated manpage.

	* lib/PandoraFMS/DataServer.pm: Added the process of position_description,
	parent_agent_name now is readed (TODO: process it). Fixed bug #2926077
	by handling the error returned by timelocal and ignoring the received
	timestamp to use the server one.

2010-02-19	Pablo de la Concepción <pablo.concepcion@artica.es>


	* lib/PandoraFMS/Core.pm: Updated docuemtation of the interface.

	* man/man3/PandoraFMS::Core.pm.3: Updated manpage with the new
	documentation of the interface

2010-02-19  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Enabled FF protection for module states
	  (not just events).

2010-02-19  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Added comments to new statistical functions.
	Added support for log4x  in statistical functions.

2010-02-18	Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/Core.pm: Restored documentation lost in one of the
	last commits.

	* man/man3/PandoraFMS::Core.pm.3: Updated manpage with the restored 
	documentation

2010-02-18	Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/Core.pm: Modified to use the new tables 
	(tgis_data_history and tgis_data_status).

	* man/man3/PandoraFMS::Core.pm.3: Updated manpage with the new 
	documentation

2010-02-18  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf: New option, self_monitoring.

	* lib/PandoraFMS/Config.pm: Support for new option self_monitoring.

	* lib/PandoraFMS/Core.pm: 	Access update is not refreshed by network 
	modules anymore (gaining a lot of performance here). Added new functions
	for internal statistics and automonitoring.

	* lib/PandoraFMS/Tools.pm: New funtions for self_monitoring.
