@@ -391,9 +391,14 @@ sub process_module_data ($$$$$$$$$) {
 		logger($pa_config, "Invalid timestamp '$timestamp' from module '$module_name' agent '$agent_name'.", 3);
 		return;
 	}
-
-	my $utimestamp = timelocal($6, $5, $4, $3, $2 - 1, $1 - 1900);
-	
+	my $utimestamp;
+    eval {
+        $utimestamp = timelocal($6, $5, $4, $3, $2 - 1, $1 - 1900);
+    };
+    if ($@) {
+        logger($pa_config, "Invalid timestamp '$timestamp' from module '$module_name' agent '$agent_name'.", 3);
+        return;
+    }
 	#my $value = get_tag_value ($data, 'data', '');		
 	my $dataObject = get_module_data($data, $agent_name, $module_name, $module_type);
 	my $extraMacros = get_macros_for_data($data, $agent_name, $module_name, $module_type);
